removed VP finance and added VP projects

--- a/src/pages/volunteers.astro
+++ b/src/pages/volunteers.astro
@@ -101,7 +101,7 @@ import Layout from "../layouts/Layout.astro";
                   required>
                   <!-- need to figure out how to have this always up to date, or we have to manually change it as our needs change-->
                   <option value="" disabled selected>Select an option</option>
-                  <option value="VP Finance">VP Finance</option>
+                  <option value="VP Project Development">VP Project Development</option>
                   <option value="VP Marketing">VP Marketing</option>
                   <option value="Project Development (Winter 2025)">Project Development (Winter 2025)</option>
                   <option value="Mentor (Winter 2025)">Mentor (Winter 2025)</option>
