swapped personal website and stream deck out for django and pygame pong

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -14,12 +14,11 @@ import Project_Card from "../components/Project_Card.astro";
 
     <div class = "pb-6 mt-8 grid lg:grid-cols-3 gap-10">
 
-      <!-- Stream Deck -->
-      <Project_Card title="Stream Deck", my_img="/stream-deck-mk2-slider-02.jpg", alt_name = "Stream Deck", body="The Stream Deck project combines knowledge from Arduino and Python to create an interactive experience for mentees! A Stream Deck is a customizable control panel that can be used to perform basic functions on your computer. In this project, mentees will start with learning the fundamentals of Arduino by creating a blinking LED circuit. This will be followed up with learning how to use a basic Arduino keypad. With this knowledge, mentees will then create a simple Python program that will allow them to perform basic functions on their computer such as pausing music or opening a website. This project combines the worlds of microcontrollers and programming to establish a broad range of skills that can be applied to many ideas you can think of!"></Project_Card>
+      <!-- The Pygame Project: Pong -->
+      <Project_Card title="The Pygame Project: Pong", my_img="/pong-2061682_1280.jpg", alt_name = "The Pygame Project: Pong", body="The Pygame Project is a fun and interactive introduction to the Python programming language. In this project, mentees will first begin to learn the basics of Python programming such as data types and basic syntax. They will practice this new found knowledge in examples of simple programs designed to help them learn how to use these data types and structures. The main part of this project will be the Pong game that they make using Python's Turtle module. Here, mentees will familiarize themselves with creating programs and have the chance to create a small game that they can play with a friend. This project will be taught with Object Oriented Programming design principles in mind, to give mentees a small but in depth introduction into the exciting world of programming."></Project_Card>
 
-      <!-- Personal Website -->
-      <Project_Card title="Personal Website", my_img="/web.png", alt_name = "Personal Website", body="In this project, we will use frontend technologies such as HTML, CSS, and Figma to design and build a personal website. We will be using HTML to create the skeleton of our website, CSS to style the appearance of our website, and Figma to create mock versions of our webpages."></Project_Card>
-
+      <!-- Django Messaging Website -->
+      <Project_Card title="Django Messaging Website", my_img="/django_image.jpg", alt_name = "Django Messaging Website", body="In the Django Messaging Website Project, we will be creating a custom chat app using the Django Web frame. The application will allow the user to set up a local chat room and send messages between two browsers. This project will begin with an overview of the basics of the Python programming language. Concepts such as variables, lists, and functions will be explored to be implemented into the application. After going over the basics, the remaining weeks will overview the creation of the chat application, exposing the mentee to languages such as Python, HTML, and JavaScript. This project encompasses a range of skills and is a great learning experience for all levels!"></Project_Card>
 
     </div>
 
@@ -27,6 +26,12 @@ import Project_Card from "../components/Project_Card.astro";
     <h1 class="pt-6 text-3xl font-bold text-center mb-8">Our Past Projects</h1>
 
     <div class = "pb-6 mt-8 grid lg:grid-cols-3 gap-10">
+
+      <!-- Stream Deck -->
+      <Project_Card title="Stream Deck", my_img="/stream-deck-mk2-slider-02.jpg", alt_name = "Stream Deck", body="The Stream Deck project combines knowledge from Arduino and Python to create an interactive experience for mentees! A Stream Deck is a customizable control panel that can be used to perform basic functions on your computer. In this project, mentees will start with learning the fundamentals of Arduino by creating a blinking LED circuit. This will be followed up with learning how to use a basic Arduino keypad. With this knowledge, mentees will then create a simple Python program that will allow them to perform basic functions on their computer such as pausing music or opening a website. This project combines the worlds of microcontrollers and programming to establish a broad range of skills that can be applied to many ideas you can think of!"></Project_Card>
+
+      <!-- Personal Website -->
+      <Project_Card title="Personal Website", my_img="/web.png", alt_name = "Personal Website", body="In this project, we will use frontend technologies such as HTML, CSS, and Figma to design and build a personal website. We will be using HTML to create the skeleton of our website, CSS to style the appearance of our website, and Figma to create mock versions of our webpages."></Project_Card>
 
       <!-- Robotic Arm -->
       <Project_Card title="Robotic Arm", my_img="/Robots-are-taking-over.jpeg", alt_name = "Robotic Arm", body="In the Robotic Arm Project, we create an interactive mechanical arm with 3 axis of rotation to lift and move items around. We learn the fundamentals of programming in C/C++ using the Arduino IDE to code desired movement with servo motors, based on keyboard input, and how to wire/connect the motors to the Arduino board. To design the arm, we will introduce basic CAD techniques to visualize prototypes with proper scaling."></Project_Card>
@@ -56,9 +61,6 @@ import Project_Card from "../components/Project_Card.astro";
 
       <!-- Arcade Game v1. -->
       <Project_Card title="Arcade Game v1.", my_img="/aedrian-mSS2r9_RGgA-unsplash.jpg", alt_name = "Arcade Game v1.", body="In this project, we will learn the basics of Arduino coding and circuits. We will use an 8x8 LED matrix display to create an arcade stacking game. We can program the Arduino to start stacking by using a physical push button."></Project_Card>
-
-      <!-- The Pygame Project: Pong -->
-      <Project_Card title="The Pygame Project: Pong", my_img="/pong-2061682_1280.jpg", alt_name = "The Pygame Project: Pong", body="The Pygame Project is a fun and interactive introduction to the Python programming language. In this project, mentees will first begin to learn the basics of Python programming such as data types and basic syntax. They will practice this new found knowledge in examples of simple programs designed to help them learn how to use these data types and structures. The main part of this project will be the Pong game that they make using Python's Turtle module. Here, mentees will familiarize themselves with creating programs and have the chance to create a small game that they can play with a friend. This project will be taught with Object Oriented Programming design principles in mind, to give mentees a small but in depth introduction into the exciting world of programming."></Project_Card>
 
       <!-- Arcade Game v2. -->
       <Project_Card title="Arcade Game v2.", my_img="/slacker.png", alt_name = "Arcade Game v2.", body="In this comprehensive project, our main objective is to explore Arduino programming and electronic circuits while creating an engaging arcade stacking game using an 8x8 LED matrix display. We'll utilize the Arduino microcontroller to define the game's mechanics, allowing players to balance and stack objects on the LED matrix. To enhance user engagement, a physical push button will be integrated, enabling players to initiate the stacking process. As we delve deeper, we'll discover various coding techniques, from LED manipulation to animation creation and user input response, building a strong foundation for future Arduino projects."></Project_Card>
