revert back to email on volunteer signup

--- a/src/pages/volunteers.astro
+++ b/src/pages/volunteers.astro
@@ -53,7 +53,7 @@ import Layout from "../layouts/Layout.astro";
         <span class="text-lg font-bold text-center mb-8">Sign up now and we’ll help you onboard!</span>
         <form 
           target="_blank" 
-          action="https://formsubmit.co/84c9c5c039394a5306721c23dffff6b4" 
+          action="https://formsubmit.co/jdrueco@ualberta.ca " 
           method="POST">
           <div class="mb-6">
             <div class="flex flex-col gap-4">
