--- a/src/pages/volunteers.astro
+++ b/src/pages/volunteers.astro
@@ -53,7 +53,7 @@ import Layout from "../layouts/Layout.astro";
         <span class="text-lg font-bold text-center mb-8">Sign up now and we’ll help you onboard!</span>
         <form 
           target="_blank" 
-          action="https://formsubmit.co/rnganzi@ualberta.ca" 
+          action="https://formsubmit.co/f569af346ac325186eee5cc62374bf9" 
           method="POST">
           <div class="mb-6">
             <div class="flex flex-col gap-4">
