--- a/src/pages/contact-us.astro
+++ b/src/pages/contact-us.astro
@@ -35,7 +35,7 @@ import Layout from "../layouts/Layout.astro";
 
       <form
         target="_blank"
-        action="https://formsubmit.co/84c9c5c039394a5306721c23dffff6b4"
+        action="https://formsubmit.co/f569af3462ac325186eee5cc62374bf9"
         method="POST"
         class="bg-white p-8 rounded-lg shadow-md border border-stone-200">
         <div class="mb-6">
@@ -73,7 +73,7 @@ import Layout from "../layouts/Layout.astro";
         <input type="hidden" name="_next" value="https://www.uafc.ca/">
         <!-- disables captcha | Jan 7, 2025: Re enabled due to spam -->
         <!-- <input type="hidden" name="_captcha" value="false"> -->
-        <input type="hidden" name="_cc" value="rnganzi@ualberta.ca">
+        <input type="hidden" name="_cc" value="jdrueco@ualberta.ca">
       </form>
     </div>
 
