updated the what are you interested in drop down

--- a/src/pages/volunteers.astro
+++ b/src/pages/volunteers.astro
@@ -36,7 +36,7 @@ import Layout from "../layouts/Layout.astro";
         <span class="text-lg">Developers create new project ideas, from drones to robotic arms to machine learning and everything between.
           <br>
           <br>
-          (We are currently not recruiting for developers at this time)</span>
+        </span>
       </div>
     </div>
     
@@ -101,10 +101,9 @@ import Layout from "../layouts/Layout.astro";
                   required>
                   <!-- need to figure out how to have this always up to date, or we have to manually change it as our needs change-->
                   <option value="" disabled selected>Select an option</option>
-                  <option value="VP Project Development">VP Project Development</option>
                   <option value="VP Marketing">VP Marketing</option>
-                  <option value="Project Development (Winter 2025)">Project Development (Winter 2025)</option>
-                  <option value="Mentor (Winter 2025)">Mentor (Winter 2025)</option>
+                  <option value="Project Development (Summer 2025)">Project Development (Summer 2025)</option>
+                  <option value="Mentor (Summer 2025)">Mentor (Summer 2025)</option>
                 </select>
               </div>
             </div>
