--- a/src/pages/contact-us.astro
+++ b/src/pages/contact-us.astro
@@ -35,7 +35,7 @@ import Layout from "../layouts/Layout.astro";
 
       <form
         target="_blank"
-        action="https://formsubmit.co/f569af3462ac325186eee5cc62374bf9"
+        action="https://formsubmit.co/uafc@ualberta.ca"
         method="POST"
         class="bg-white p-8 rounded-lg shadow-md border border-stone-200">
         <div class="mb-6">
