--- a/src/pages/volunteers.astro
+++ b/src/pages/volunteers.astro
@@ -53,7 +53,7 @@ import Layout from "../layouts/Layout.astro";
         <span class="text-lg font-bold text-center mb-8">Sign up now and we’ll help you onboard!</span>
         <form 
           target="_blank" 
-          action="https://formsubmit.co/uafc@ualberta.ca" 
+          action="https://formsubmit.co/8b32bdecaca8eea4663458bd92f64c0f" 
           method="POST">
           <div class="mb-6">
             <div class="flex flex-col gap-4">
@@ -123,7 +123,6 @@ import Layout from "../layouts/Layout.astro";
           <input type="hidden" name="_next" value="https://www.uafc.ca/">
           <!-- disables captcha | Jan 7, 2025: Re enabled due to spam -->
           <!-- <input type="hidden" name="_captcha" value="false"> -->
-          <input type="hidden" name="_cc" value="jdrueco@ualberta.ca">
         </form>
       </div>
     </div>
